--- a/assignment01/README
+++ b/assignment01/README
@@ -1,1 +1,1 @@
-
+Sorry that the pickle file with all language pair similaries scores are too big to push to github (exceeds the limit of 100mb after compression)
