--- a/assignment08_word-embedding/script.ipynb
+++ b/assignment08_word-embedding/script.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
        " 'Šefčovič Šefčovič']"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,18 +113,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2000000 300\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "zh_embeds, en_embeds = {}, {}\n",
     "max_tokens = 100000\n",
@@ -132,12 +123,16 @@
     "    i, j = 0, 0\n",
     "    for line in f:\n",
     "        line = line.strip().split()\n",
+    "        if len(line) == 2:\n",
+    "            continue\n",
     "        zh_embeds[line[0]] = [float(n) for n in line[1:]]\n",
     "        i += 1\n",
     "        if i == max_tokens:\n",
     "            break\n",
     "    for line in f2:\n",
     "        line = line.strip().split()\n",
+    "        if len(line) == 2:\n",
+    "            continue\n",
     "        en_embeds[line[0]] = [float(n) for n in line[1:]]\n",
     "        j += 1\n",
     "        if j == max_tokens:\n",
@@ -153,9 +148,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "190523"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "merged = en_embeds\n",
     "for token in zh_embeds:\n",
@@ -166,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +183,7 @@
     "        token = pair[0]\n",
     "        embed = pair[1]\n",
     "        print(token, sep=\"\", end=\" \", file=f)\n",
-    "        print(embed, file=f)"
+    "        print(*embed, file=f)"
    ]
   },
   {
