--- a/Assignment09_bert_embeddings/script.ipynb
+++ b/Assignment09_bert_embeddings/script.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,8 +51,8 @@
     "                return_token_type_ids=False, return_attention_mask=True, is_split_into_words=True, add_special_tokens=False)\n",
     "    input_ids, attention_mask = tokenized[\"input_ids\"], tokenized[\"attention_mask\"]\n",
     "    tokens = tokenizer_mono.convert_ids_to_tokens(input_ids[0])\n",
-    "    #print(\"Subwords:\", \"len:\", len(tokens), tokens)\n",
-    "    #print(\"subwords ids:\", input_ids)\n",
+    "    print(\"Subwords:\", \"len:\", len(tokens), tokens)\n",
+    "    print(\"subwords ids:\", input_ids)\n",
     "    #print(\"Input_ids:\", input_ids.shape)\n",
     "    ### not word_spans can't be a dictionary as there can be repeated word in a sentence, e.g. \"the\"\n",
     "    word_spans = []\n",
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,7 @@
        " ('.', 9, 10)]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,13 +169,14 @@
     "        #print(sent_embeddings.shape)\n",
     "        #print(sent_embeddings)\n",
     "        for word, i, j in word_spans:\n",
-    "            #print(word)\n",
+    "            print(word)\n",
     "            ## get the embeddings of each word in the sentence\n",
     "            word_embed = sent_embeddings[:, i:j, :]\n",
     "            ## word embedding is the mean of all its subwords\n",
     "            word_embed = torch.mean(word_embed, dim=1)\n",
     "            ## somehow torch returns \"NaN\" value instead of just 0.0\n",
     "            word_embed = torch.nan_to_num(word_embed)\n",
+    "            print(word_embed.shape)\n",
     "            word_embeds.append(word_embed[0].tolist())\n",
     "    return word_embeds"
    ]
@@ -191,9 +192,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A\n",
+      "torch.Size([1, 768])\n",
+      "platypus\n",
+      "torch.Size([1, 768])\n",
+      "is\n",
+      "torch.Size([1, 768])\n",
+      "a\n",
+      "torch.Size([1, 768])\n",
+      "mammal\n",
+      "torch.Size([1, 768])\n",
+      ".\n",
+      "torch.Size([1, 768])\n"
+     ]
+    }
+   ],
    "source": [
     "example = get_word_embeddings(input_ids, attention_mask, word_spans)"
    ]
